[tool.poetry]
name = "iolite"
version = "0.1.0"
authors = ["Hunt Zhan <huntzhan.dev@gmail.com>"]
license = "Not open source"
description = ""
readme = "README.md"
repository = "https://github.com/huntzhan/iolite"
packages = [
    { include = "iolite" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
yapf = "^0.30.0"
flake8 = "^3.8.2"
twine = "^3.1.1"

# CLI.
# [tool.poetry.scripts]
# iolite = "iolite:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
