[tool.poetry]
name = "iolite"
version = "0.3.0"
authors = ["Hunt Zhan <huntzhan.dev@gmail.com>"]
license = "Not open source"
description = ""
readme = "README.md"
repository = "https://github.com/huntzhan/iolite"
packages = [
    { include = "iolite" },
]

[tool.poetry.dependencies]
python = ">= 3.6"
tqdm = "^4.54.1"
toml = "^0.10.2"
joblib = "^0.17.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
yapf = "^0.30.0"
flake8 = "^3.8.2"
twine = "^3.1.1"
ipython = "^7.16.1"

[[tool.poetry.source]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple"
default = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
